--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ nav img {
       rgba(11,28,45,0.75),
       rgba(11,28,45,0.75)
     ),
-    url('assets/dpm_foto.jpg') center/cover no-repeat;
+    url('assets/dpm foto.jpg') center/cover no-repeat;
   color: #fff;
 }
 
